# course_work_6_Django

./: README.md  pyproject.toml
ESender/: apps.py
Esender/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
Esender/management/commands/: send_mailing.py
Esender/migrations/: 0001_initial.py  0002_alter_client_options_alter_logs_options_and_more.py  0002_initial.py  0003_message_owner.py
Esender/templates/Esender/: base.html  client_confirm_delete.html  client_detail.html  client_form.html  client_list.html  logs_list.html  mailingsettings_confirm_delete.html  mailingsettings_detail.html  mailingsettings_form.html  mailingsettings_list.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html
Esender/templates/Esender/includes/: inc_main_menu.html
blog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
blog/templatetags/: my_tags.py
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
users/templates/users/: confirm_email.html  email_confirmation_failed.html  login.html  user_form.html
