[tool.poetry]
name = "course-work-6-django"
version = "0.1.0"
description = ""
authors = ["Ramzes_13 <rslobolinsky13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"
psycopg2 = "^2.9.9"
pillow = "^10.3.0"
django-stubs = "^4.2.7"
pytils = "^0.4.1"
python-slugify = "^8.0.4"
ipython = "^8.23.0"
django-apscheduler = "^0.6.2"
django-crontab = "^0.7.1"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
